test/tests/stages/5_local_variables/valid/extra_credit/compound_bitwise_shiftr.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(to_shiftr)
  =
  const int(382574)
  ;
  identifier(to_shiftr)
  >>=
  const int(4)
  ;
  return
  identifier(to_shiftr)
  ;
  }
