test/tests/stages/5_local_variables/invalid_semantics/extra_credit/undeclared_bitwise_op.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(a)
  >>
  const int(2)
  ;
  }
